--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     --bg-color:#1e1c2a;
     --big-font:5rem;
     --h2-font:2.25rem;
-    --p-font:0.09rem;
+    --p-font:0.9rem;
 }
 *::selection{
     background: var(--main-color);
@@ -144,10 +144,34 @@ section{
     border-radius: 0.5rem;
 }
 .box-img{
-    width: 220px;
-    height: 220px;
+    width: 200px;
+    height: 200px;
 }
 .box-img img{
     width: 100%;
     height: 100%;
+}
+.box h2{
+    font-size: 1.3rem;
+    color: var(--bg-color);
+}
+.box h3{
+    color: var(--bg-color);
+    font-size: 1rem;
+    font-weight: 400;
+    margin: 4px 0 10px;
+}
+.box span{
+    font-size: var(--p-font);
+    color: var(--main-color);
+    font-weight: 600; 
+}
+.box .bx{
+    background: var(--main-color);
+    position: absolute;
+    right: 0;
+    top: 0;
+    font-size: 20px;
+    padding: 7px 10px;
+    border-radius: 0 0.5rem 0 0.5rem;
 }
